<resources>
    <string name="app_name">Just Java</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="order_summary">Order Summary</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="nameLabel">Name: </string>
    <string name="addWhippedCream">Add whipped cream? </string>
    <string name="addChocolate">Add chocolate? </string>
    <string name="quantityLabel">Quantity: </string>
    <string name="totalLabel">Total: $ </string>
    <string name="thankYou">Thank you!</string>
    <string name="JavaOrder">Just Java Order for </string>
    <string name="_2_extra">($2 extra)</string>
    <string name="_1_extra">($1 extra)</string>
</resources  >
